// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetch info by ip address 73.202.174.69 1`] = `
Object {
  "city": "San Francisco",
  "country": "United States",
  "country_code": "US",
  "datetime": Object {
    "date": "01/20/2018",
    "date_time": "01/20/2018 00:01:14",
    "date_time_txt": "Saturday, January 20, 2018 00:01:14",
    "date_time_wti": "Sat, 20 Jan 2018 00:01:14 -0800",
    "date_time_ymd": "2018-01-20T00:01:14-08:00",
    "day": "20",
    "day_abbr": "Sat",
    "day_full": "Saturday",
    "day_wilz": "20",
    "dst": "false",
    "dst_observes": "true",
    "hour_12_wilz": "12",
    "hour_12_wolz": "12",
    "hour_24_wilz": "00",
    "hour_24_wolz": "0",
    "hour_am_pm": "am",
    "minutes": "01",
    "month": "1",
    "month_abbr": "Jan",
    "month_days": "31",
    "month_full": "January",
    "month_wilz": "01",
    "offset_gmt": "-08:00",
    "offset_hours": "-8",
    "offset_minutes": "-480",
    "offset_seconds": "-28800",
    "offset_tzab": "PST",
    "offset_tzfull": "Pacific Standard Time",
    "offset_tzid": "America/Los_Angeles",
    "seconds": "14",
    "time": "00:01:14",
    "timeday_gen": "night",
    "timeday_spe": "late_night",
    "week": "03",
    "year": "2018",
    "year_abbr": "18",
  },
  "ip": "73.202.174.69",
  "location": "37.7957,-122.4209",
  "postal": "94109",
  "state": "California",
  "state_code": "CA",
  "timezone": Object {
    "capital": "Washington",
    "continent": "NA",
    "country_code": "US",
    "country_name": "United States of America",
    "currency_alpha_code": "USD",
    "currency_code": "840",
    "currency_country_name": "UNITED STATES",
    "currency_minor_unit": "2",
    "currency_name": "US Dollar",
    "ds": "USA",
    "edgar": "",
    "fifa": "USA",
    "fips": "US",
    "geoname_id": "6252001",
    "gual": "259",
    "id": "America/Los_Angeles",
    "independent": "Yes",
    "ioc": "USA",
    "iso3166_1_alpha_2": "US",
    "iso3166_1_alpha_3": "USA",
    "itu": "USA",
    "languages": "en-US,es-US,haw,fr",
    "location": "34.05222,-118.24278",
    "marc": "xxu",
    "phone_prefix": "1",
    "tld": ".us",
    "un_m49_code": "840",
    "wmo": "US",
  },
}
`;

exports[`fetch info by ip address 174.215.17.217 1`] = `
Object {
  "city": null,
  "country": "United States",
  "country_code": "US",
  "datetime": null,
  "ip": "174.215.17.217",
  "location": "37.751,-97.822",
  "postal": null,
  "state": null,
  "state_code": null,
  "timezone": null,
}
`;

exports[`fetch info by ip address 185.86.151.11 1`] = `
Object {
  "city": "London",
  "country": "United Kingdom",
  "country_code": "GB",
  "datetime": Object {
    "date": "01/20/2018",
    "date_time": "01/20/2018 08:01:14",
    "date_time_txt": "Saturday, January 20, 2018 08:01:14",
    "date_time_wti": "Sat, 20 Jan 2018 08:01:14 +0000",
    "date_time_ymd": "2018-01-20T08:01:14+00:00",
    "day": "20",
    "day_abbr": "Sat",
    "day_full": "Saturday",
    "day_wilz": "20",
    "dst": "false",
    "dst_observes": "true",
    "hour_12_wilz": "08",
    "hour_12_wolz": "8",
    "hour_24_wilz": "08",
    "hour_24_wolz": "8",
    "hour_am_pm": "am",
    "minutes": "01",
    "month": "1",
    "month_abbr": "Jan",
    "month_days": "31",
    "month_full": "January",
    "month_wilz": "01",
    "offset_gmt": "+00:00",
    "offset_hours": "0",
    "offset_minutes": "0",
    "offset_seconds": "0",
    "offset_tzab": "GMT",
    "offset_tzfull": "Greenwich Mean Time",
    "offset_tzid": "Europe/London",
    "seconds": "14",
    "time": "08:01:14",
    "timeday_gen": "morning",
    "timeday_spe": "early_morning",
    "week": "03",
    "year": "2018",
    "year_abbr": "18",
  },
  "ip": "185.86.151.11",
  "location": "51.5142,-0.0931",
  "postal": "EC2V",
  "state": "England",
  "state_code": "ENG",
  "timezone": Object {
    "capital": "London",
    "continent": "EU",
    "country_code": "GB",
    "country_name": "United Kingdom of Great Britain and Northern Ireland",
    "currency_alpha_code": "GBP",
    "currency_code": "826",
    "currency_country_name": "UNITED KINGDOM",
    "currency_minor_unit": "2",
    "currency_name": "Pound Sterling",
    "ds": "GB",
    "edgar": "X0",
    "fifa": "ENG,NIR,SCO,WAL",
    "fips": "UK",
    "geoname_id": "2635167",
    "gual": "256",
    "id": "Europe/London",
    "independent": "Yes",
    "ioc": "GBR",
    "iso3166_1_alpha_2": "GB",
    "iso3166_1_alpha_3": "GBR",
    "itu": "G",
    "languages": "en-GB,cy-GB,gd",
    "location": "51.50833,-0.12528",
    "marc": "xxk",
    "phone_prefix": "44",
    "tld": ".uk",
    "un_m49_code": "826",
    "wmo": "UK",
  },
}
`;

exports[`fetch info by ip address 204.148.101.50 1`] = `
Object {
  "city": "San Francisco",
  "country": "United States",
  "country_code": "US",
  "datetime": Object {
    "date": "01/20/2018",
    "date_time": "01/20/2018 00:01:13",
    "date_time_txt": "Saturday, January 20, 2018 00:01:13",
    "date_time_wti": "Sat, 20 Jan 2018 00:01:13 -0800",
    "date_time_ymd": "2018-01-20T00:01:13-08:00",
    "day": "20",
    "day_abbr": "Sat",
    "day_full": "Saturday",
    "day_wilz": "20",
    "dst": "false",
    "dst_observes": "true",
    "hour_12_wilz": "12",
    "hour_12_wolz": "12",
    "hour_24_wilz": "00",
    "hour_24_wolz": "0",
    "hour_am_pm": "am",
    "minutes": "01",
    "month": "1",
    "month_abbr": "Jan",
    "month_days": "31",
    "month_full": "January",
    "month_wilz": "01",
    "offset_gmt": "-08:00",
    "offset_hours": "-8",
    "offset_minutes": "-480",
    "offset_seconds": "-28800",
    "offset_tzab": "PST",
    "offset_tzfull": "Pacific Standard Time",
    "offset_tzid": "America/Los_Angeles",
    "seconds": "13",
    "time": "00:01:13",
    "timeday_gen": "night",
    "timeday_spe": "late_night",
    "week": "03",
    "year": "2018",
    "year_abbr": "18",
  },
  "ip": "204.148.101.50",
  "location": "37.7749,-122.4194",
  "postal": "94119",
  "state": "California",
  "state_code": "CA",
  "timezone": Object {
    "capital": "Washington",
    "continent": "NA",
    "country_code": "US",
    "country_name": "United States of America",
    "currency_alpha_code": "USD",
    "currency_code": "840",
    "currency_country_name": "UNITED STATES",
    "currency_minor_unit": "2",
    "currency_name": "US Dollar",
    "ds": "USA",
    "edgar": "",
    "fifa": "USA",
    "fips": "US",
    "geoname_id": "6252001",
    "gual": "259",
    "id": "America/Los_Angeles",
    "independent": "Yes",
    "ioc": "USA",
    "iso3166_1_alpha_2": "US",
    "iso3166_1_alpha_3": "USA",
    "itu": "USA",
    "languages": "en-US,es-US,haw,fr",
    "location": "34.05222,-118.24278",
    "marc": "xxu",
    "phone_prefix": "1",
    "tld": ".us",
    "un_m49_code": "840",
    "wmo": "US",
  },
}
`;

exports[`fetch info by ip address 219.93.183.103 1`] = `
Object {
  "city": "Kuala Selangor",
  "country": "Malaysia",
  "country_code": "MY",
  "datetime": Object {
    "date": "01/20/2018",
    "date_time": "01/20/2018 16:01:14",
    "date_time_txt": "Saturday, January 20, 2018 16:01:14",
    "date_time_wti": "Sat, 20 Jan 2018 16:01:14 +0800",
    "date_time_ymd": "2018-01-20T16:01:14+08:00",
    "day": "20",
    "day_abbr": "Sat",
    "day_full": "Saturday",
    "day_wilz": "20",
    "dst": "false",
    "dst_observes": "true",
    "hour_12_wilz": "04",
    "hour_12_wolz": "4",
    "hour_24_wilz": "16",
    "hour_24_wolz": "16",
    "hour_am_pm": "pm",
    "minutes": "01",
    "month": "1",
    "month_abbr": "Jan",
    "month_days": "31",
    "month_full": "January",
    "month_wilz": "01",
    "offset_gmt": "+08:00",
    "offset_hours": "8",
    "offset_minutes": "480",
    "offset_seconds": "28800",
    "offset_tzab": "MYT",
    "offset_tzfull": "Malaysia Time",
    "offset_tzid": "Asia/Kuala_Lumpur",
    "seconds": "14",
    "time": "16:01:14",
    "timeday_gen": "afternoon",
    "timeday_spe": "late_afternoon",
    "week": "03",
    "year": "2018",
    "year_abbr": "18",
  },
  "ip": "219.93.183.103",
  "location": "3.35,101.25",
  "postal": "45400",
  "state": "Selangor",
  "state_code": "10",
  "timezone": Object {
    "capital": "Kuala Lumpur",
    "continent": "AS",
    "country_code": "MY",
    "country_name": "Malaysia",
    "currency_alpha_code": "MYR",
    "currency_code": "458",
    "currency_country_name": "MALAYSIA",
    "currency_minor_unit": "2",
    "currency_name": "Malaysian Ringgit",
    "ds": "MAL",
    "edgar": "N8",
    "fifa": "MAS",
    "fips": "MY",
    "geoname_id": "1733045",
    "gual": "153",
    "id": "Asia/Kuala_Lumpur",
    "independent": "Yes",
    "ioc": "MAS",
    "iso3166_1_alpha_2": "MY",
    "iso3166_1_alpha_3": "MYS",
    "itu": "MLA",
    "languages": "ms-MY,en,zh,ta,te,ml,pa,th",
    "location": "3.16666,101.7",
    "marc": "my",
    "phone_prefix": "60",
    "tld": ".my",
    "un_m49_code": "458",
    "wmo": "MS",
  },
}
`;

exports[`fetch info by ip address 2601:646:103:3170:e5e4:1b28:f1cc:6e74 1`] = `
Object {
  "city": "San Francisco",
  "country": "United States",
  "country_code": "US",
  "datetime": Object {
    "date": "01/20/2018",
    "date_time": "01/20/2018 00:01:13",
    "date_time_txt": "Saturday, January 20, 2018 00:01:13",
    "date_time_wti": "Sat, 20 Jan 2018 00:01:13 -0800",
    "date_time_ymd": "2018-01-20T00:01:13-08:00",
    "day": "20",
    "day_abbr": "Sat",
    "day_full": "Saturday",
    "day_wilz": "20",
    "dst": "false",
    "dst_observes": "true",
    "hour_12_wilz": "12",
    "hour_12_wolz": "12",
    "hour_24_wilz": "00",
    "hour_24_wolz": "0",
    "hour_am_pm": "am",
    "minutes": "01",
    "month": "1",
    "month_abbr": "Jan",
    "month_days": "31",
    "month_full": "January",
    "month_wilz": "01",
    "offset_gmt": "-08:00",
    "offset_hours": "-8",
    "offset_minutes": "-480",
    "offset_seconds": "-28800",
    "offset_tzab": "PST",
    "offset_tzfull": "Pacific Standard Time",
    "offset_tzid": "America/Los_Angeles",
    "seconds": "13",
    "time": "00:01:13",
    "timeday_gen": "night",
    "timeday_spe": "late_night",
    "week": "03",
    "year": "2018",
    "year_abbr": "18",
  },
  "ip": "2601:646:103:3170:e5e4:1b28:f1cc:6e74",
  "location": "37.7957,-122.4209",
  "postal": "94109",
  "state": "California",
  "state_code": "CA",
  "timezone": Object {
    "capital": "Washington",
    "continent": "NA",
    "country_code": "US",
    "country_name": "United States of America",
    "currency_alpha_code": "USD",
    "currency_code": "840",
    "currency_country_name": "UNITED STATES",
    "currency_minor_unit": "2",
    "currency_name": "US Dollar",
    "ds": "USA",
    "edgar": "",
    "fifa": "USA",
    "fips": "US",
    "geoname_id": "6252001",
    "gual": "259",
    "id": "America/Los_Angeles",
    "independent": "Yes",
    "ioc": "USA",
    "iso3166_1_alpha_2": "US",
    "iso3166_1_alpha_3": "USA",
    "itu": "USA",
    "languages": "en-US,es-US,haw,fr",
    "location": "34.05222,-118.24278",
    "marc": "xxu",
    "phone_prefix": "1",
    "tld": ".us",
    "un_m49_code": "840",
    "wmo": "US",
  },
}
`;
